# opencode-mem-infra

./: .env  .env.example  README.md  docker-compose.yml
source/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  diff.patch  flake.nix  git_diff_output.txt  test_candidates.rs  test_vulnerabilities.sh
source/.github/workflows/: ci.yml  release.yml
source/crates/cli/: Cargo.toml
source/crates/cli/src/: main.rs
source/crates/cli/src/commands/: hook.rs  import_insights.rs  mcp.rs  mod.rs  search.rs  serve.rs
source/crates/cli/tests/: cli_tests.rs
source/crates/core/: Cargo.toml
source/crates/core/src/: app_config.rs  constants.rs  env_config.rs  error.rs  hook.rs  identifiers.rs  infinite_memory.rs  json_utils.rs  knowledge.rs  lib.rs  project_filter.rs  session.rs
source/crates/core/src/observation/: builder.rs  dedup.rs  dedup_tests.rs  input.rs  low_value_filter.rs  merge.rs  mod.rs  observation_type.rs  trivial_tool_call.rs
source/crates/core/src/observation/content_filter/: mod.rs
source/crates/core/src/observation/content_filter/tests/: memory_filter_tests.rs  mod.rs  private_filter_tests.rs
source/crates/core/src/observation/low_value_filter/: tests.rs
source/crates/embeddings/: Cargo.toml
source/crates/embeddings/src/: api.rs  error.rs  lib.rs
source/crates/http/: Cargo.toml
source/crates/http/src/: api_error.rs  api_types.rs  blocking.rs  lib.rs  query_types.rs  response_types.rs  routes.rs  viewer.html  viewer.rs
source/crates/http/src/handlers/: admin.rs  api_docs.rs  branch.rs  context.rs  cron.rs  infinite.rs  knowledge.rs  mod.rs  observations.rs  queue.rs  queue_processor.rs  session_ops.rs  sessions.rs  sessions_api.rs
source/crates/http/src/handlers/search/: basic.rs  mod.rs  unified.rs
source/crates/llm/: Cargo.toml
source/crates/llm/src/: ai_types.rs  client.rs  compression_prompt.rs  error.rs  insights.rs  insights_tests.rs  knowledge.rs  knowledge_tests.rs  lib.rs  observation.rs  retry_tests.rs  summary.rs
source/crates/llm/src/tests/: context_aware_tests.rs  mod.rs  noise_level_tests.rs  structured_summary_tests.rs  test_helpers.rs  utils_tests.rs
source/crates/mcp/: Cargo.toml
source/crates/mcp/src/: lib.rs  tests.rs  tool_schemas.rs  tools.rs
source/crates/mcp/src/handlers/: dispatch.rs  infinite.rs  knowledge.rs  memory_tests.rs  memory_tests_save.rs  memory_tests_search.rs  mod.rs
source/crates/mcp/src/handlers/memory/: mod.rs  read_handlers.rs  write_handlers.rs
source/crates/mcp/tests/: degraded_mode.rs
source/crates/mcp/tests/degraded_mode/: read_tools_tests.rs  write_tools_tests.rs
source/crates/service/: Cargo.toml
source/crates/service/src/: error.rs  knowledge_service.rs  lib.rs  maintenance.rs  pending_write_queue.rs  queue_service.rs  session_service.rs
source/crates/service/src/infinite_memory_service/: compression.rs  mod.rs  pipeline.rs  queries.rs
source/crates/service/src/observation_service/: adversarial_tests.rs  adversarial_tests2.rs  compression.rs  dedup_sweep.rs  injection.rs  mod.rs  persistence.rs  privacy_tests.rs  save_memory.rs  side_effects.rs
source/crates/service/src/search_service/: embedding_ops.rs  hybrid_ops.rs  mod.rs  query_ops.rs
source/crates/storage/: Cargo.toml
source/crates/storage/migrations/: 20240221000000_init.sql  20260303000000_fts_simple_dictionary.sql  20260305000000_knowledge_confidence_lifecycle.sql  20260307000000_add_call_id_to_pending.sql  20260307000001_injected_observations_fk_cascade.sql  20260314000000_knowledge_trigram_similarity.sql  20260314000001_normalize_project_names.sql  20260315000000_knowledge_embeddings.sql  20260315000001_knowledge_cleanup.sql  20260315000002_hnsw_embedding_index.sql  20260315000003_observations_updated_at.sql
source/crates/storage/migrations_infinite/: 20240221000000_init_infinite.sql  20240221000001_add_call_id.sql  20240302000000_fix_ts_date.sql  20260314000000_normalize_project_names.sql
source/crates/storage/src/: backend.rs  circuit_breaker.rs  error.rs  lib.rs  pending_queue.rs  pg_migrations.rs  traits.rs.orig  traits.rs.rej
source/crates/storage/src/pg_storage/: domain_parsers.rs  embeddings.rs  injections.rs  knowledge.rs  mod.rs  observation_delete.rs  observations.rs  pending.rs  prompts.rs  row_parsers.rs  sessions.rs  stats.rs  summaries.rs
source/crates/storage/src/pg_storage/infinite_memory/: events.rs  migrations.rs  mod.rs
source/crates/storage/src/pg_storage/infinite_memory/summaries/: mod.rs  mutations.rs
source/crates/storage/src/pg_storage/infinite_memory/summaries/queries/: aggregation.rs  lookup.rs  mod.rs
source/crates/storage/src/pg_storage/search/: fts.rs  mod.rs  semantic.rs  timeline.rs  utils.rs
source/crates/storage/src/pg_storage/search/hybrid/: mod.rs  v1.rs  v2.rs
source/crates/storage/src/tests/: classification_race_tests.rs  embedding_text_tests.rs  knowledge_race_tests.rs  knowledge_trigram_tests.rs  mod.rs  union_dedup_tests.rs
source/crates/storage/src/traits/: embedding.rs  injection.rs  knowledge.rs  mod.rs  observation.rs  prompt.rs  queue.rs  search.rs  session.rs  stats.rs
source/crates/storage/tests/pg_integration/: embedding_tests.rs  knowledge_tests.rs  main.rs  observation_tests.rs  queue_tests.rs  search_tests.rs  session_tests.rs  stats_tests.rs  test_fixtures.rs
source/docs/: ADR.md
source/hooks/: README.md  on-file-save.sh  on-session-end.sh  on-session-start.sh
