[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/storage",
    "crates/embeddings",
    "crates/llm",
    "crates/service",
    "crates/http",
    "crates/mcp",

    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
authors = ["Stranmor <stranmor@gmail.com>"]
repository = "https://github.com/Stranmor/opencode-mem"
description = "High-performance MCP memory server for AI coding agents with hybrid search and hierarchical summarization"
keywords = ["mcp", "llm", "memory", "pgvector", "ai-agent"]
categories = ["command-line-utilities", "database"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-stream = "0.3"
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "uuid"] }

# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utils
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
regex = "1"
globset = "0.4"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
opencode-mem-core = { path = "crates/core", version = "0.1.0" }
opencode-mem-storage = { path = "crates/storage", version = "0.1.0" }
opencode-mem-embeddings = { path = "crates/embeddings", version = "0.1.0" }
opencode-mem-llm = { path = "crates/llm", version = "0.1.0" }
opencode-mem-http = { path = "crates/http", version = "0.1.0" }
opencode-mem-mcp = { path = "crates/mcp", version = "0.1.0" }

opencode-mem-service = { path = "crates/service", version = "0.1.0" }

[profile.release]
lto = true
strip = true

[workspace.lints]
