[package]
name = "opencode-mem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types and constants for opencode-mem"
keywords = ["memory", "opencode", "mcp"]
categories = ["development-tools"]
homepage = "https://github.com/Stranmor/opencode-mem"
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
unicode-normalization = "0.1"
sqlx = { workspace = true, optional = true }

[features]
default = ["sqlx-types"]
sqlx-types = ["dep:sqlx"]
