[package]
name = "opencode-mem-embeddings"
version.workspace = true
edition.workspace = true
description = "Vector embeddings via fastembed BGE-M3 for semantic search"
keywords = ["embeddings", "vector", "semantic-search", "ai"]
categories = ["text-processing"]
homepage = "https://github.com/Stranmor/opencode-mem"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
opencode-mem-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fastembed = "5"
ort = "2.0.0-rc.11"
reqwest = { workspace = true, features = ["blocking", "json"] }
serde_json = { workspace = true }
