[package]
name = "opencode-mem-service"
version.workspace = true
edition.workspace = true
description = "Business logic layer for observations, sessions, and queues"
keywords = ["memory", "opencode", "mcp"]
categories = ["development-tools"]
homepage = "https://github.com/Stranmor/opencode-mem"
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
opencode-mem-storage = { workspace = true }
opencode-mem-llm = { workspace = true }
opencode-mem-embeddings = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
