[package]
name = "opencode-mem-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PostgreSQL storage backend with pgvector and tsvector full-text search"
keywords = ["postgresql", "vector", "fts", "memory"]
categories = ["database"]
homepage = "https://github.com/Stranmor/opencode-mem"
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
opencode-mem-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
sqlx = { workspace = true }
pgvector = { version = "0.4.1", features = ["sqlx", "postgres"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
